--- a/rapport.tex
+++ b/rapport.tex
@@ -127,7 +127,7 @@ La matrice de confusion montre que les erreurs sont principalement concentrées 
 \begin{figure}[H]
 \centering
 \includegraphics[width=\textwidth]{log_diy/Figure_3.png}
-\caption{Exemples de prédictions (rouge = erreurs, vert = correct)}
+\caption{Heatmap des poids par classe (rouge = positif, bleu = négatif)}
 \end{figure}
 
 \subsection{Régression Logistique avec Régularisation Ridge et Lasso}
@@ -294,7 +294,7 @@ Cette interprétabilité est un avantage de la régression logistique par rappor
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.8\textwidth]{log_diy/Figure_4.png}
-\caption{Visualisation des poids appris pour chaque classe}
+\caption{Exemple de prédictions (vert = correct, rouge = erreurs)}
 \end{figure}
 
 \subsection{Régression Logistique avec Scikit-Learn}
